--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.0.4",
     "next": "latest",
+    "postcss": "^8.1.10",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "autoprefixer": "^10.0.4",
-    "postcss": "^8.1.10",
     "tailwindcss": "^2.0.2"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.22",
+    "@types/react": "^17.0.1",
+    "typescript": "^4.1.3"
   }
 }
