--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "postcss-caralho": "^2.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-simple-maps": "^2.3.0",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.1",
+    "@types/react-simple-maps": "^1.0.3",
     "typescript": "^4.1.3"
   }
 }
