--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-simple-maps": "^2.3.0",
+    "swr": "^0.4.1",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
