--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@juggle/resize-observer": "^3.3.1",
     "autoprefixer": "^10.0.4",
     "framer-motion": "^3.3.0",
     "ioredis": "^4.27.1",
@@ -19,6 +20,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-simple-maps": "^2.3.0",
+    "react-use-measure": "^2.0.4",
     "swr": "^0.4.1",
     "tailwindcss": "^2.0.2"
   },
