--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@juggle/resize-observer": "^3.3.1",
     "@radix-ui/colors": "^0.1.7",
+    "@stitches/react": "^1.2.5",
     "autoprefixer": "^10.0.4",
     "framer-motion": "^3.3.0",
     "ioredis": "^4.27.1",
