--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-simple-maps": "^2.3.0",
     "react-use-measure": "^2.0.4",
     "swr": "^0.4.1",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^2.0.2",
+    "zustand": "^3.6.0"
   },
   "devDependencies": {
     "@types/ioredis": "^4.26.0",
