--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "autoprefixer": "^10.0.4",
     "framer-motion": "^3.3.0",
     "ioredis": "^4.27.1",
-    "next": "latest",
+    "next": "^12.0.0",
     "next-seo": "^4.19.0",
     "next-translate": "^1.0.6",
     "postcss": "^8.1.10",
