--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@juggle/resize-observer": "^3.3.1",
     "@radix-ui/colors": "^0.1.7",
     "@stitches/react": "^1.2.5",
+    "@tanstack/react-query": "^4.0.10",
     "autoprefixer": "^10.0.4",
     "framer-motion": "^3.3.0",
     "ioredis": "^4.27.1",
