--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@stitches/react": "^1.2.5",
     "@tanstack/react-query": "^4.0.10",
     "autoprefixer": "^10.0.4",
-    "framer-motion": "^3.3.0",
-    "ioredis": "^4.27.1",
+    "cobe": "^0.5.0",
+    "jotai": "^1.7.6",
     "next": "^12.2.3",
     "next-seo": "^4.19.0",
     "next-translate": "^1.0.6",
@@ -22,17 +22,12 @@
     "postcss-caralho": "^2.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-simple-maps": "^2.3.0",
     "react-use-measure": "^2.0.4",
-    "swr": "^0.4.1",
-    "tailwindcss": "^2.0.2",
-    "zustand": "^3.6.0"
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
-    "@types/ioredis": "^4.26.0",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.1",
-    "@types/react-simple-maps": "^1.0.3",
     "typescript": "^4.1.3"
   }
 }
