--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@builder.io/partytown": "^0.7.0",
     "@radix-ui/colors": "^0.1.7",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.1",
